tests/baselines/reference/parserIndexMemberDeclaration10.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration10.ts (2 errors) ====
    class C {
       static static [x: string]: string;
       ~~~~~~~~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
              ~~~~~~
!!! error TS1030: 'static' modifier already seen.
    }